# adventofcode

./: .gitignore  README.md  download-input.sh  install-googletest.sh
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml  test_c++.yml  test_python.yml  test_rust.yml
2016/: __main__.py  day01.py  day02.py  download-input.sh
2016/aoc2016/: __main__.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day12.py  run.py  utils.py
2016/tests/: test_days.py
2017/: utils.h
2017/day_1/: exercise_1.cpp  exercise_2.cpp
2017/day_2/: exercise_1.cpp  exercise_2.cpp
2017/day_3/: exercise_1.cpp
2017/day_4/: exercise_1.cpp  exercise_2.cpp
2017/day_5/: exercise_1.cpp  exercise_2.cpp
2017/day_6/: exercise_1.cpp  exercise_2.cpp
2017/day_7/: exercise_1.cpp
2018/aoc2018/: run.py
2018/python/: download-input.sh
2018/rust/: Cargo.toml  download-input.sh
2020/: CMakeLists.txt  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  day26.cpp  day27.cpp  day28.cpp  day29.cpp  day30.cpp  day31.cpp  download-input.sh  lib.cpp  manager.cpp  manager.h  run_day.cpp  test_all.cpp  utils.h
2021/: download-input.sh
2022/: Cargo.toml  README.md  download-input.sh
2023/: download-input.sh
2024/: download-input.sh  main.py  pyproject.toml
day_1/: exercise_2.cpp
day_5/: exercise_2.cpp
(+58 files in other folders)
